[package]
name = "megatron"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Headless CMS, API generator, data management, experimental. Work in progress."
repository = "https://github.com/narzantaria/megatron"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
